prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/var_scope_5.diag.txt
ERROR: Unknown variable [x]
testData/diagnostics/var_scope_5.nut:4:8

else
  print(x)
        ^


